--- a/packages/grafana-settings/carbonio-dashboards.yml
+++ b/packages/grafana-settings/carbonio-dashboards.yml
@@ -1,7 +1,7 @@
 apiVersion: 1
 providers:
- - name: 'Carbonio'
-   type: file
-   options:
-     path: /etc/grafana/provisioning/dashboards
-     foldersFromFileStructure: false
+  - name: "Carbonio"
+    type: file
+    options:
+      path: /etc/grafana/provisioning/dashboards
+      foldersFromFileStructure: false
