--- a/packages/prometheus-alertmanager/PKGBUILD
+++ b/packages/prometheus-alertmanager/PKGBUILD
@@ -42,29 +42,36 @@ conflicts=(
 )
 
 backup=(
-    "/etc/carbonio/${pkgname}/alertmanager.yml"
-    "/etc/carbonio/${pkgname}/email.tmpl"
-    "/etc/carbonio/${pkgname}/alert_rules.yml"
+  "/etc/carbonio/${pkgname}/alertmanager.yml"
+  "/etc/carbonio/${pkgname}/email.tmpl"
+  "/etc/carbonio/${pkgname}/alert_rules.yml"
 )
 
 package() {
   cd "${srcdir}/alertmanager-${pkgver}.linux-amd64"
-  
-  install -Dm 755 alertmanager "${pkgdir}/usr/bin/${pkgname}"
-  install -Dm 755 amtool "${pkgdir}/usr/bin/amtool"
+
+  install -Dm 755 alertmanager \
+    "${pkgdir}/usr/bin/${pkgname}"
+  install -Dm 755 amtool \
+    "${pkgdir}/usr/bin/amtool"
 
   install -dm 750 -o210 -g210 "${pkgdir}/var/lib/alertmanager/data"
   install -dm 750 -o210 -g210 "${pkgdir}/etc/carbonio/${pkgname}/email-templates"
 
-  install -Dm 644 -g210 "${srcdir}/alertmanager.yml"  "${pkgdir}/etc/carbonio/${pkgname}/alertmanager.yml"
-  install -Dm 644 -g210 "${srcdir}/email.tmpl"  "${pkgdir}/etc/carbonio/${pkgname}/email.tmpl"
-  install -Dm 644 -g210 "${srcdir}/alert_rules.yml"  "${pkgdir}/etc/carbonio/${pkgname}/alert_rules.yml"
-  
-  install -Dm 644 "${srcdir}"/${pkgname}.service  "${pkgdir}/usr/lib/systemd/system/${pkgname}.service"
-  install -Dm 644 "${srcdir}"/${pkgname}.default  "${pkgdir}/etc/default/${pkgname}"
-  install -Dm 644 "${srcdir}"/prometheus.sysusers  "${pkgdir}/usr/lib/sysusers.d/${pkgname}.conf"	
-}
+  install -Dm 644 -g210 "${srcdir}/alertmanager.yml" \
+    "${pkgdir}/etc/carbonio/${pkgname}/alertmanager.yml"
+  install -Dm 644 -g210 "${srcdir}/email.tmpl" \
+    "${pkgdir}/etc/carbonio/${pkgname}/email.tmpl"
+  install -Dm 644 -g210 "${srcdir}/alert_rules.yml" \
+    "${pkgdir}/etc/carbonio/${pkgname}/alert_rules.yml"
 
+  install -Dm 644 "${srcdir}"/${pkgname}.service \
+    "${pkgdir}/usr/lib/systemd/system/${pkgname}.service"
+  install -Dm 644 "${srcdir}"/${pkgname}.default \
+    "${pkgdir}/etc/default/${pkgname}"
+  install -Dm 644 "${srcdir}"/prometheus.sysusers \
+    "${pkgdir}/usr/lib/sysusers.d/${pkgname}.conf"
+}
 
 postinst() {
   if hash initctl 2>/dev/null; then
@@ -74,11 +81,11 @@ postinst() {
   systemd-sysusers >/dev/null || true
   systemd-tmpfiles --create >/dev/null || true
 
-  # While in beta enable service manually 
+  # While in beta enable service manually
   # if [ -d /run/systemd/system ]; then
-    # systemctl daemon-reload >/dev/null 2>&1 || :
-    # systemctl enable ${pkgname}.service >/dev/null 2>&1 || :
-    # systemctl start ${pkgname}.service >/dev/null 2>&1 || :
+  # systemctl daemon-reload >/dev/null 2>&1 || :
+  # systemctl enable ${pkgname}.service >/dev/null 2>&1 || :
+  # systemctl start ${pkgname}.service >/dev/null 2>&1 || :
   # fi
 
   echo "======================================================"
