--- a/packages/prometheus-consul/PKGBUILD
+++ b/packages/prometheus-consul/PKGBUILD
@@ -37,19 +37,20 @@ conflicts=(
   'prometheus-consul-exporter'
 )
 
-#backup=(
-#)
-
-
 package() {
   cd "${srcdir}/consul_exporter-${pkgver}.linux-amd64"
-  
-  install -Dm 755 consul_exporter "${pkgdir}/usr/bin/${pkgname}"
 
-  install -Dm 644 "${srcdir}/${pkgname}.service" "${pkgdir}/usr/lib/systemd/system/${pkgname}.service"
-  install -Dm 644 "${srcdir}/${pkgname}.default" "${pkgdir}/etc/default/${pkgname}"
-  install -Dm 644 "${srcdir}/prometheus.sysusers" "${pkgdir}/usr/lib/sysusers.d/${pkgname}.conf"
-  install -Dm 644 "${srcdir}/${pkgname}-consul.hcl" "${pkgdir}/etc/zextras/service-discover/${pkgname}.hcl"		
+  install -Dm 755 consul_exporter \
+    "${pkgdir}/usr/bin/${pkgname}"
+
+  install -Dm 644 "${srcdir}/${pkgname}.service" \
+    "${pkgdir}/usr/lib/systemd/system/${pkgname}.service"
+  install -Dm 644 "${srcdir}/${pkgname}.default" \
+    "${pkgdir}/etc/default/${pkgname}"
+  install -Dm 644 "${srcdir}/prometheus.sysusers" \
+    "${pkgdir}/usr/lib/sysusers.d/${pkgname}.conf"
+  install -Dm 644 "${srcdir}/${pkgname}-consul.hcl" \
+    "${pkgdir}/etc/zextras/service-discover/${pkgname}.hcl"
 }
 
 postinst() {
@@ -65,7 +66,7 @@ postinst() {
     systemctl enable ${pkgname}.service >/dev/null 2>&1 || :
     systemctl start ${pkgname}.service >/dev/null 2>&1 || :
   fi
- 
+
   echo "======================================================"
   echo "Carbonio Consul Exporter installed successfully!"
   echo "You must reload service discover or add this host to prometheus.yml"
