--- a/packages/prometheus-mysqld/PKGBUILD
+++ b/packages/prometheus-mysqld/PKGBUILD
@@ -44,19 +44,26 @@ conflicts=(
 
 package() {
   cd "${srcdir}/mysqld_exporter-${pkgver}.linux-amd64"
-  
-  install -Dm 755 mysqld_exporter "${pkgdir}/usr/bin/${pkgname}"
-	
-  install -Dm 755 "${srcdir}/set-${pkgname}.sh" "${pkgdir}/usr/bin/set-${pkgname}.sh"
-	
-  install -Dm 644 "${srcdir}/${pkgname}.service" "${pkgdir}/usr/lib/systemd/system/${pkgname}.service"
-	
-  install -Dm 644 "${srcdir}/${pkgname}.default" "${pkgdir}/etc/default/${pkgname}"
-	
-  install -Dm 644 "${srcdir}/${pkgname}.cnf" "${pkgdir}/etc/carbonio/${pkgname}/${pkgname}.cnf"
 
-  install -Dm 644 "${srcdir}/prometheus.sysusers" "${pkgdir}/usr/lib/sysusers.d/${pkgname}.conf"
-  install -Dm 644 "${srcdir}/${pkgname}-consul.hcl" "${pkgdir}/etc/zextras/service-discover/${pkgname}.hcl"		
+  install -Dm 755 mysqld_exporter \
+    "${pkgdir}/usr/bin/${pkgname}"
+
+  install -Dm 755 "${srcdir}/set-${pkgname}.sh" \
+    "${pkgdir}/usr/bin/set-${pkgname}.sh"
+
+  install -Dm 644 "${srcdir}/${pkgname}.service" \
+    "${pkgdir}/usr/lib/systemd/system/${pkgname}.service"
+
+  install -Dm 644 "${srcdir}/${pkgname}.default" \
+    "${pkgdir}/etc/default/${pkgname}"
+
+  install -Dm 644 "${srcdir}/${pkgname}.cnf" \
+    "${pkgdir}/etc/carbonio/${pkgname}/${pkgname}.cnf"
+
+  install -Dm 644 "${srcdir}/prometheus.sysusers" \
+    "${pkgdir}/usr/lib/sysusers.d/${pkgname}.conf"
+  install -Dm 644 "${srcdir}/${pkgname}-consul.hcl" \
+    "${pkgdir}/etc/zextras/service-discover/${pkgname}.hcl"
 }
 
 postinst() {
@@ -67,14 +74,14 @@ postinst() {
   systemd-sysusers >/dev/null || true
   systemd-tmpfiles --create >/dev/null || true
 
-  /usr/bin/set-${pkgname}.sh 	
+  /usr/bin/set-${pkgname}.sh
 
   if [ -d /run/systemd/system ]; then
     systemctl daemon-reload >/dev/null 2>&1 || :
     systemctl enable ${pkgname}.service >/dev/null 2>&1 || :
     systemctl start ${pkgname}.service >/dev/null 2>&1 || :
   fi
-  
+
   echo "======================================================"
   echo "Carbonio Mysql Exporter installed successfully!"
   echo "You must reload service discover or add this host to prometheus.yml"
