--- a/packages/prometheus-nginx/PKGBUILD
+++ b/packages/prometheus-nginx/PKGBUILD
@@ -38,16 +38,21 @@ conflicts=(
 )
 
 backup=(
-   "/etc/zextras/service-discover/${pkgname}.hcl"
+  "/etc/zextras/service-discover/${pkgname}.hcl"
 )
 
 package() {
-  install -Dm 755 "${srcdir}/nginx-prometheus-exporter" "${pkgdir}/usr/bin/${pkgname}"
-  install -Dm 644 "${srcdir}/${pkgname}.service" "${pkgdir}/usr/lib/systemd/system/${pkgname}.service"
-  install -Dm 644 "${srcdir}/${pkgname}.default" "${pkgdir}/etc/default/${pkgname}"
-	
-  install -Dm 644 "${srcdir}/prometheus.sysusers" "${pkgdir}/usr/lib/sysusers.d/${pkgname}".conf	
-  install -Dm 644 "${srcdir}/${pkgname}-consul.hcl" "${pkgdir}//etc/zextras/service-discover/${pkgname}.hcl"
+  install -Dm 755 "${srcdir}/nginx-prometheus-exporter" \
+    "${pkgdir}/usr/bin/${pkgname}"
+  install -Dm 644 "${srcdir}/${pkgname}.service" \
+    "${pkgdir}/usr/lib/systemd/system/${pkgname}.service"
+  install -Dm 644 "${srcdir}/${pkgname}.default" \
+    "${pkgdir}/etc/default/${pkgname}"
+
+  install -Dm 644 "${srcdir}/prometheus.sysusers" \
+    "${pkgdir}/usr/lib/sysusers.d/${pkgname}".conf
+  install -Dm 644 "${srcdir}/${pkgname}-consul.hcl" \
+    "${pkgdir}//etc/zextras/service-discover/${pkgname}.hcl"
 }
 
 postinst() {
