--- a/packages/prometheus-node/PKGBUILD
+++ b/packages/prometheus-node/PKGBUILD
@@ -16,7 +16,6 @@ priority="optional"
 arch="amd64"
 sources=(
   "https://github.com/prometheus/node_exporter/releases/download/v${pkgver}/node_exporter-${pkgver}.linux-amd64.tar.gz"
-
   "${pkgname}.default"
   "${pkgname}-consul.hcl"
   "${pkgname}.service"
@@ -45,13 +44,18 @@ conflicts=(
 package() {
   cd "${srcdir}/node_exporter-${pkgver}.linux-amd64"
 
-  install -Dm 755 node_exporter "${pkgdir}/usr/${pkgname}"
+  install -Dm 755 node_exporter \
+    "${pkgdir}/usr/${pkgname}"
 
-  install -Dm 644 "${srcdir}/${pkgname}.service" "${pkgdir}/usr/lib/systemd/system/${pkgname}.service"
-  install -Dm 644 "${srcdir}/${pkgname}.default" "${pkgdir}/etc/default/${pkgname}"
-	
-  install -Dm 644 "${srcdir}/prometheus.sysusers" "${pkgdir}/usr/lib/sysusers.d/${pkgname}.conf"	
-  install -Dm 644 "${srcdir}/${pkgname}-consul.hcl" "${pkgdir}/etc/zextras/service-discover/${pkgname}.hcl"	
+  install -Dm 644 "${srcdir}/${pkgname}.service" \
+    "${pkgdir}/usr/lib/systemd/system/${pkgname}.service"
+  install -Dm 644 "${srcdir}/${pkgname}.default" \
+    "${pkgdir}/etc/default/${pkgname}"
+
+  install -Dm 644 "${srcdir}/prometheus.sysusers" \
+    "${pkgdir}/usr/lib/sysusers.d/${pkgname}.conf"
+  install -Dm 644 "${srcdir}/${pkgname}-consul.hcl" \
+    "${pkgdir}/etc/zextras/service-discover/${pkgname}.hcl"
 }
 
 postinst() {
