--- a/packages/prometheus-openldap/PKGBUILD
+++ b/packages/prometheus-openldap/PKGBUILD
@@ -52,16 +52,22 @@ package() {
   gunzip -f openldap_exporter-linux-amd64.gz
   install -Dm 755 openldap_exporter-linux-amd64 "${pkgdir}/usr/bin/${pkgname}"
 
-  install -Dm 644 "${srcdir}/set-${pkgname}.sh" "${pkgdir}/etc/zextras/pending-setups.d/set-${pkgname}.sh"
-  
-  install -Dm 644 "${srcdir}/${pkgname}.service" "${pkgdir}/usr/lib/systemd/system/${pkgname}.service"
-	
-  install -Dm 644 "${srcdir}/${pkgname}.default" "${pkgdir}/etc/default/${pkgname}"
-	
-  install -Dm 644 "${srcdir}/${pkgname}.yml" "${pkgdir}/etc/carbonio/${pkgname}/${pkgname}.yml"
+  install -Dm 644 "${srcdir}/set-${pkgname}.sh" \
+    "${pkgdir}/etc/zextras/pending-setups.d/set-${pkgname}.sh"
 
-  install -Dm 644 "${srcdir}/prometheus.sysusers" "${pkgdir}/usr/lib/sysusers.d/${pkgname}.conf"	
-  install -Dm 644 "${srcdir}/${pkgname}-consul.hcl" "${pkgdir}/etc/zextras/service-discover/${pkgname}.hcl"		
+  install -Dm 644 "${srcdir}/${pkgname}.service" \
+    "${pkgdir}/usr/lib/systemd/system/${pkgname}.service"
+
+  install -Dm 644 "${srcdir}/${pkgname}.default" \
+    "${pkgdir}/etc/default/${pkgname}"
+
+  install -Dm 644 "${srcdir}/${pkgname}.yml" \
+    "${pkgdir}/etc/carbonio/${pkgname}/${pkgname}.yml"
+
+  install -Dm 644 "${srcdir}/prometheus.sysusers" \
+    "${pkgdir}/usr/lib/sysusers.d/${pkgname}.conf"
+  install -Dm 644 "${srcdir}/${pkgname}-consul.hcl" \
+    "${pkgdir}/etc/zextras/service-discover/${pkgname}.hcl"
 }
 
 postinst() {
@@ -72,14 +78,14 @@ postinst() {
   systemd-sysusers >/dev/null || true
   systemd-tmpfiles --create >/dev/null || true
 
-  #/usr/set-${pkgname}.sh 	
+  #/usr/set-${pkgname}.sh
 
   if [ -d /run/systemd/system ]; then
     systemctl daemon-reload >/dev/null 2>&1 || :
     systemctl enable ${pkgname}.service >/dev/null 2>&1 || :
     systemctl start ${pkgname}.service >/dev/null 2>&1 || :
   fi
-  
+
   echo "======================================================"
   echo "Carbonio LDAP Exporter installed successfully!"
   echo "You must run pending-setups to configure it correctly."
