--- a/packages/prometheus/PKGBUILD
+++ b/packages/prometheus/PKGBUILD
@@ -45,23 +45,28 @@ backup=(
   "/etc/carbonio/${pkgname}/prometheus.yml"
 )
 
-
 package() {
   cd "${srcdir}/prometheus-${pkgver}.linux-amd64"
-  
+
   install -Dm 755 prometheus "${pkgdir}/usr/bin/prometheus"
   install -Dm 755 promtool "${pkgdir}/usr/bin/promtool"
 
   install -dm 750 -o210 -g210 "${pkgdir}/var/lib/prometheus"
 
-  install -Dm 640 -g210 "${srcdir}/prometheus.yml" "${pkgdir}/etc/carbonio/${pkgname}/prometheus.yml"
-  install -Dm 640 -g210 "${srcdir}/policies.json" "${pkgdir}/etc/carbonio/${pkgname}/service-discover/policies.json"
+  install -Dm 640 -g210 "${srcdir}/prometheus.yml" \
+    "${pkgdir}/etc/carbonio/${pkgname}/prometheus.yml"
+  install -Dm 640 -g210 "${srcdir}/policies.json" \
+    "${pkgdir}/etc/carbonio/${pkgname}/service-discover/policies.json"
   cp -r consoles* "${pkgdir}/etc/carbonio/${pkgname}/"
-	
-  install -Dm 755 "${srcdir}/carbonio-prometheus.sh" "${pkgdir}/etc/zextras/pending-setups.d/carbonio-prometheus.sh"
-  install -Dm 644 "${srcdir}/prometheus.service" "${pkgdir}/usr/lib/systemd/system/${pkgname}.service"
-  install -Dm 644 "${srcdir}/prometheus.sysusers" "${pkgdir}/usr/lib/sysusers.d/${pkgname}.conf"
-  install -Dm 644 "${srcdir}/prometheus.default" "${pkgdir}/etc/default/${pkgname}"
+
+  install -Dm 755 "${srcdir}/carbonio-prometheus.sh" \
+    "${pkgdir}/etc/zextras/pending-setups.d/carbonio-prometheus.sh"
+  install -Dm 644 "${srcdir}/prometheus.service" \
+    "${pkgdir}/usr/lib/systemd/system/${pkgname}.service"
+  install -Dm 644 "${srcdir}/prometheus.sysusers" \
+    "${pkgdir}/usr/lib/sysusers.d/${pkgname}.conf"
+  install -Dm 644 "${srcdir}/prometheus.default" \
+    "${pkgdir}/etc/default/${pkgname}"
 }
 
 postinst() {
