--- a/packages/prometheus-node/PKGBUILD
+++ b/packages/prometheus-node/PKGBUILD
@@ -1,40 +1,31 @@
-targets=(
-  "centos"
-  "ubuntu"
-)
 pkgname="carbonio-prometheus-node-exporter"
 pkgver="1.6.1"
 pkgrel="1"
 pkgdesc="Node exporter for open-source systems monitoring and alerting toolkit"
-pkgdesclong=(
-  "Node exporter for open-source systems monitoring and alerting toolkit"
-)
 maintainer="Zextras <packages@zextras.com>"
 url="https://zextras.com"
 section="mail"
 priority="optional"
-arch="amd64"
-sources=(
+arch=('x86_64')
+source=(
   "https://github.com/prometheus/node_exporter/releases/download/v${pkgver}/node_exporter-${pkgver}.linux-amd64.tar.gz"
   "${pkgname}.default"
   "${pkgname}-consul.hcl"
   "${pkgname}.service"
   "prometheus.sysusers"
 )
-hashsums=(
-  "skip"
-  "skip"
-  "skip"
-  "skip"
-  "skip"
-)
+sha256sums=('ecc41b3b4d53f7b9c16a370419a25a133e48c09dfc49499d63bcc0c5e0cf3d01'
+  '8f7ca757c4a98ce33e77c41c1915c6699173dc5535af3c6006b6e091ef7f9d11'
+  'dad0dc366ca725978de9ff45522ac51e1b414dbcbd4f3be9ac891d2e19ca8671'
+  '20672ccb0e218f17d29a6ac3ac7a6af2dccbba002d9a66cbf8c49da239c3df4d'
+  'b15c53ad5dd81f03e3af90e8a78a1a0e84e68af4de2beb18a9851bb4e8754224')
 
 depends=(
   "systemd"
 )
 
 backup=(
-  "/etc/default/${pkgname}"
+  "etc/default/${pkgname}"
 )
 
 conflicts=(
@@ -68,8 +59,8 @@ postinst() {
 
   if [ -d /run/systemd/system ]; then
     systemctl daemon-reload >/dev/null 2>&1 || :
-    systemctl enable ${pkgname}.service >/dev/null 2>&1 || :
-    systemctl start ${pkgname}.service >/dev/null 2>&1 || :
+    systemctl enable carbonio-prometheus-node-exporter.service >/dev/null 2>&1 || :
+    systemctl start carbonio-prometheus-node-exporter.service >/dev/null 2>&1 || :
   fi
 
   echo "======================================================"
@@ -80,8 +71,8 @@ postinst() {
 
 prerm() {
   if [ -d /run/systemd/system ]; then
-    systemctl --no-reload disable ${pkgname}.service >/dev/null 2>&1 || :
-    systemctl stop ${pkgname}.service >/dev/null 2>&1 || :
+    systemctl --no-reload disable carbonio-prometheus-node-exporter.service >/dev/null 2>&1 || :
+    systemctl stop carbonio-prometheus-node-exporter.service >/dev/null 2>&1 || :
   fi
 }
 
