--- a/packages/prometheus/PKGBUILD
+++ b/packages/prometheus/PKGBUILD
@@ -1,20 +1,13 @@
-targets=(
-  "centos"
-  "ubuntu"
-)
 pkgname="carbonio-prometheus"
 pkgver="2.47.1"
 pkgrel="1"
 pkgdesc="An open-source systems monitoring and alerting toolkit"
-pkgdesclong=(
-  "An open-source systems monitoring and alerting toolkit"
-)
 maintainer="Zextras <packages@zextras.com>"
 url="https://zextras.com"
 section="mail"
 priority="optional"
-arch="amd64"
-sources=(
+arch=('x86_64')
+source=(
   "https://github.com/prometheus/prometheus/releases/download/v${pkgver}/prometheus-${pkgver}.linux-amd64.tar.gz"
   "prometheus.default"
   "prometheus.service"
@@ -23,15 +16,13 @@ sources=(
   "carbonio-prometheus.sh"
   "policies.json"
 )
-hashsums=(
-  "skip"
-  "skip"
-  "skip"
-  "skip"
-  "skip"
-  "skip"
-  "skip"
-)
+sha256sums=('40d6db7305b11e645bb43d7f3f4025c6394743c0b9e4f3029db2db80198e37d4'
+  'cc41da9ca3507e01ca0ab953cdd009c84e19d1788835115ec6e2779678543a72'
+  'b986e65191da8334d70b9f7545784bacae2425f90db29e124bb7e5f953f96acc'
+  'b15c53ad5dd81f03e3af90e8a78a1a0e84e68af4de2beb18a9851bb4e8754224'
+  '99e4bc60580cd117cdc11b7685ad882785387ee9408e47c36af3aa5d14d62207'
+  'cdb7b2b2f5ac90c4f3958e584a4c5899c250db1b4775e34f1a242e5713443192'
+  '9a3cb3da73ca92b641e9ac31223deadc0587c9ea280884a8ac8e80ab4266aa25')
 
 depends=(
   "systemd"
@@ -42,7 +33,7 @@ conflicts=(
 )
 
 backup=(
-  "/etc/carbonio/${pkgname}/prometheus.yml"
+  "etc/carbonio/${pkgname}/prometheus.yml"
 )
 
 package() {
