--- a/packages/prometheus-pgpool/PKGBUILD
+++ b/packages/prometheus-pgpool/PKGBUILD
@@ -1,7 +1,7 @@
 pkgname="carbonio-prometheus-pgpool-exporter"
 pkgver="0.14.0"
 pkgrel="1"
-pkgdesc="Postgres exporter for open-source systems monitoring and alerting toolkit"
+pkgdesc="Pgpool exporter for open-source systems monitoring and alerting toolkit"
 maintainer="Zextras <packages@zextras.com>"
 url="https://zextras.com"
 section="mail"
@@ -77,7 +77,7 @@ postinst() {
   fi
 
   echo "======================================================"
-  echo "Carbonio Postgres Exporter installed successfully!"
+  echo "Carbonio Pgpool2 Exporter installed successfully!"
   echo "You must reload service discover or add this host to prometheus.yml"
   echo "======================================================"
 }
