--- a/packages/prometheus-openldap/PKGBUILD
+++ b/packages/prometheus-openldap/PKGBUILD
@@ -8,7 +8,7 @@ section="mail"
 priority="optional"
 arch=('x86_64')
 source=(
-  "https://github.com/mlorenzo-stratio/openldap_exporter/archive/refs/tags/v${pkgver}.tar.gz"
+  "https://github.com/mlorenzo-stratio/openldap_exporter/archive/refs/tags/v${pkgver}.zip"
   "${pkgname}.default"
   "${pkgname}.service"
   "${pkgname}.yml"
@@ -25,6 +25,7 @@ sha256sums=(
   "SKIP"
   "SKIP")
 
+
 depends=(
   "systemd"
 )
@@ -38,11 +39,23 @@ backup=(
   "etc/carbonio/${pkgname}/${pkgname}.yml"
   "etc/zextras/service-discover/${pkgname}.hcl"
 )
+ build(){
+  cd "${srcdir}/openldap-prometheus-exporter-v${pkgver}/"
+
+    export CGO_CPPFLAGS="${CPPFLAGS}"
+    export CGO_CFLAGS="${CFLAGS}"
+    export CGO_CXXFLAGS="${CXXFLAGS}"
+    export CGO_LDFLAGS="${LDFLAGS}"
+    export GOFLAGS="-buildmode=pie -trimpath -ldflags=-linkmode=external -mod=readonly"
+
+    go build -o "${srcdir}/openldap-prometheus-exporter-v${pkgver}/carbonio-prometheus-openldap-exporter"
+ }
 
 package() {
-  cd "${srcdir}"
-  gunzip -f openldap_exporter-linux-amd64.gz
-  install -Dm 755 openldap_exporter-linux-amd64 "${pkgdir}/usr/bin/${pkgname}"
+  cd "${srcdir}/"
+
+  install -Dm 755 "./openldap-prometheus-exporter-v${pkgver}/carbonio-prometheus-openldap-exporter" \
+    "${pkgdir}/usr/bin/${pkgname}"
 
   install -Dm 644 "${srcdir}/set-${pkgname}.sh" \
     "${pkgdir}/etc/zextras/pending-setups.d/set-${pkgname}.sh"
