--- a/packages/prometheus-blackbox/PKGBUILD
+++ b/packages/prometheus-blackbox/PKGBUILD
@@ -7,6 +7,7 @@ url="https://zextras.com"
 section="mail"
 priority="optional"
 arch=('x86_64')
+license=('Apache-2.0')
 source=(
   "https://github.com/prometheus/blackbox_exporter/releases/download/v${pkgver}/blackbox_exporter-${pkgver}.linux-amd64.tar.gz"
   "${pkgname}.default"
