--- a/packages/prometheus-openldap/PKGBUILD
+++ b/packages/prometheus-openldap/PKGBUILD
@@ -31,7 +31,7 @@ depends=(
 )
 
 conflicts=(
-  'prometheus-openldap-exporter'
+  'openldap-exporter'
 )
 
 makedepends=(
@@ -44,21 +44,14 @@ backup=(
   "etc/zextras/service-discover/${pkgname}.hcl"
 )
  build(){
-  cd "${srcdir}/openldap-prometheus-exporter-${pkgver}/"
-
-    export CGO_CPPFLAGS="${CPPFLAGS}"
-    export CGO_CFLAGS="${CFLAGS}"
-    export CGO_CXXFLAGS="${CXXFLAGS}"
-    export CGO_LDFLAGS="${LDFLAGS}"
-    export GOFLAGS="-buildmode=pie -trimpath -ldflags=-linkmode=external -mod=readonly"
-
-    go build -v -o "${srcdir}/openldap-prometheus-exporter-${pkgver}/carbonio-prometheus-openldap-exporter"
+  cd "${srcdir}/openldap-exporter-${pkgver}/"
+    go build -v -o "${srcdir}/openldap-exporter-${pkgver}/carbonio-prometheus-openldap-exporter"
  }
 
 package() {
   cd "${srcdir}/"
 
-  install -Dm 755 "./openldap-prometheus-exporter-${pkgver}/carbonio-prometheus-openldap-exporter" \
+  install -Dm 755 "./openldap-exporter-${pkgver}/carbonio-prometheus-openldap-exporter" \
     "${pkgdir}/usr/bin/${pkgname}"
 
   install -Dm 644 "${srcdir}/set-${pkgname}.sh" \
