--- a/packages/prometheus-pgpool/PKGBUILD
+++ b/packages/prometheus-pgpool/PKGBUILD
@@ -1,7 +1,7 @@
-pkgname="carbonio-prometheus-postgres-exporter"
-pkgver="0.14.0"
+pkgname="carbonio-prometheus-pgpool-exporter"
+pkgver="1.2.1"
 pkgrel="1"
-pkgdesc="Postgres exporter for open-source systems monitoring and alerting toolkit"
+pkgdesc="Pgpool exporter for open-source systems monitoring and alerting toolkit"
 maintainer="Zextras <packages@zextras.com>"
 url="https://zextras.com"
 section="mail"
@@ -9,12 +9,12 @@ priority="optional"
 arch=('x86_64')
 license=('Apache-2.0')
 source=(
-  "https://github.com/prometheus-community/postgres_exporter/releases/download/v${pkgver}/postgres_exporter-${pkgver}.linux-amd64.tar.gz"
+  "https://github.com/pgpool/pgpool2_exporter/releases/download/v${pkgver}/pgpool2_exporter-${pkgver}.linux-amd64.tar.gz"
   "${pkgname}.default"
   "${pkgname}.service"
-  "${pkgname}.yml"
+  # "${pkgname}.yml"
   "${pkgname}-consul.hcl"
-  "set-${pkgname}.sh"
+  # "set-${pkgname}.sh"
   "prometheus.sysusers"
 )
 sha256sums=(
@@ -23,8 +23,8 @@ sha256sums=(
   "SKIP"
   "SKIP"
   "SKIP"
-  "SKIP"
-  "SKIP"
+  # "SKIP"
+  # "SKIP"
 )
 
 depends=(
@@ -32,7 +32,7 @@ depends=(
 )
 
 conflicts=(
-  'prometheus-postgres-exporter'
+  'prometheus-pgpool2-exporter'
 )
 
 backup=(
@@ -40,20 +40,20 @@ backup=(
 )
 
 package() {
-  cd "${srcdir}/postgres_exporter-${pkgver}.linux-amd64"
+  cd "${srcdir}/pgpool2_exporter-${pkgver}.linux-amd64"
 
-  install -Dm 755 "postgres_exporter" \
+  install -Dm 755 "pgpool2_exporter" \
     "${pkgdir}/usr/bin/${pkgname}"
 
-  install -Dm 755 "${srcdir}/set-${pkgname}.sh" \
-    "${pkgdir}/usr/bin/set-${pkgname}.sh"
+  # install -Dm 755 "${srcdir}/set-${pkgname}.sh" \
+  #   "${pkgdir}/usr/bin/set-${pkgname}.sh"
 
   install -Dm 644 "${srcdir}/${pkgname}.service" \
     "${pkgdir}/usr/lib/systemd/system/${pkgname}.service"
   install -Dm 644 "${srcdir}/${pkgname}.default" \
     "${pkgdir}/etc/default/${pkgname}"
-  install -Dm 644 "${srcdir}/${pkgname}.yml" \
-    "${pkgdir}/etc/carbonio/${pkgname}/${pkgname}.yml"
+  # install -Dm 644 "${srcdir}/${pkgname}.yml" \
+  #   "${pkgdir}/etc/carbonio/${pkgname}/${pkgname}.yml"
 
   install -Dm 644 "${srcdir}/prometheus.sysusers" \
     "${pkgdir}/usr/lib/sysusers.d/${pkgname}.conf"
@@ -69,24 +69,24 @@ postinst() {
   systemd-sysusers >/dev/null || true
   systemd-tmpfiles --create >/dev/null || true
 
-  /usr/bin/set-carbonio-prometheus-postgres-exporter.sh
+  #/usr/bin/set-carbonio-prometheus-postgres-exporter.sh
 
   if [ -d /run/systemd/system ]; then
     systemctl daemon-reload >/dev/null 2>&1 || :
-    systemctl enable carbonio-prometheus-postgres-exporter.service >/dev/null 2>&1 || :
-    systemctl start carbonio-prometheus-postgres-exporter.service >/dev/null 2>&1 || :
+    systemctl enable carbonio-prometheus-pgpool-exporter.service >/dev/null 2>&1 || :
+    systemctl start carbonio-prometheus-pgpool-exporter.service >/dev/null 2>&1 || :
   fi
 
   echo "======================================================"
-  echo "Carbonio Postgres Exporter installed successfully!"
+  echo "Carbonio Pgpool2 Exporter installed successfully!"
   echo "You must reload service discover or add this host to prometheus.yml"
   echo "======================================================"
 }
 
 prerm() {
   if [ -d /run/systemd/system ]; then
-    systemctl --no-reload disablecarbonio-prometheus-postgres-exporter.service >/dev/null 2>&1 || :
-    systemctl stop carbonio-prometheus-postgres-exporter.service >/dev/null 2>&1 || :
+    systemctl --no-reload disable carbonio-prometheus-pgpool-exporter.service >/dev/null 2>&1 || :
+    systemctl stop carbonio-prometheus-pgpool-exporter.service >/dev/null 2>&1 || :
   fi
 }
 
